--- a/src/trueStoryProject/Application/Application.csproj
+++ b/src/trueStoryProject/Application/Application.csproj
@@ -10,13 +10,18 @@
     <Folder Include="Features\MockAPIModels\Constants\" />
     <Folder Include="Features\MockAPIModels\Queries\" />
     <Folder Include="Features\MockAPIModels\Profiles\" />
-    <Folder Include="Features\MockAPIModels\Rules\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="14.0.0" />
     <PackageReference Include="FluentValidation" Version="11.11.0" />
     <PackageReference Include="MediatR" Version="10.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\corePackages\Core.Application\Core.Application.csproj" />
+    <ProjectReference Include="..\..\corePackages\Core.CrossCuttingConcerns\Core.CrossCuttingConcerns.csproj" />
+    <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
 </Project>
