--- a/src/trueStoryProject/Domain/Domain.csproj
+++ b/src/trueStoryProject/Domain/Domain.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="RestSharp" Version="112.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\corePackages\Core.Persistence\Core.Persistence.csproj" />
   </ItemGroup>
 
