--- a/src/trueStoryProject/Application/Application.csproj
+++ b/src/trueStoryProject/Application/Application.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="RestSharp" Version="112.1.0" />
 	<PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
+	 <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.2.1" />
 
   </ItemGroup>
 
