--- a/src/trueStoryProject/WebAPI/appsettings.json
+++ b/src/trueStoryProject/WebAPI/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ApiSettings": {
+        "BaseUrl": "https://api.restful-api.dev/"
+    },
+    "AllowedHosts": "*"
 }
